2009-05-27  Gordon Williams <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Added explicit enable of
	visibility detection in readiness for clutter 0.8.2-0maemo33 which
	will have detection off by default.

2009-05-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#112098 HildonProgram's is-topmost property is behaving oddly

	This is rather a fix for NB#115761 but magomez says it closes the
	parent bug as well.  What's happened in NB#112098 is not clear but
	with the later camera changed its fullscreenness while it was zooming
	out, which caused its reactivation.

	* matchbox/core/mb-wm-client.c (mb_wm_client_set_state):
	  Don't (re)activate the client when it's changing state.

2009-05-25  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.40

2009-05-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_destroy): Free buttons list
	as well.
	* matchbox/core/mb-wm-client.c (mb_wm_client_destroy): Free priv
	member as well.
	* matchbox/core/mb-wm-object.c (mb_wm_object_init): Do not allocate
	ObjectClasses and ObjectClassesInfo every time the function is called.
	* matchbox/core/mb-wm-client.c (mb_wm_client_destroy): Free decor list
	after unreffing the objects in the list.

2009-05-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_layout_free): Stop
	reconfiguring windows once a window covering the whole screen was
	encountered in the stack. Fixes: NB#117392

2009-05-18  Daniel Elstner  <danielk@openismus.com>

	* matchbox/core/mb-wm.h: Do not define _GNU_SOURCE here, as this is
	a public header file.  Also, the header itself doesn't actually need
	this feature macro.
	* util/matchbox-remote.c: Remove _GNU_SOURCE from here, too.
	* configure.ac: Invoke the Autoconf macro AC_USE_SYSTEM_EXTENSIONS
	to define feature macros such as _GNU_SOURCE automatically.
	(AC_PREREQ): Increase Autoconf version requirement to 2.60.
