@@ -1,3 +1,12 @@
+2009-05-27  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+	Fixes: NB#117084 System-modal windows lose focus
+	                 if an app sends _NET_ACTIVE_WINDOW
+	
+	* matchbox/core/mb-window-manager.c: System modality is tested
+	using a separate function; this means we don't mistakenly allow
+	focus to transfer to non-dialogues merely because they're intransient.
+
 2009-05-27  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Added explicit enable of
